# LoopBench-Optimizer

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  QUICKSTART.md  README.md  changes.md  myprojectinfo.md  pyproject.toml  pyrefly.toml
configs/: README.md  loopbench_default.yaml  metric_parser_example.yaml
docs/: README.md  blog.html  candidate_db_guide.md  data.json  defining-benchmarks.md  index.html  metric_parser_guide.md  repo_mapper_api.md  repo_mapper_guide.md  workspace_manager_guide.md
examples/: README.md  candidate_db_demo.py  metric_parser_demo.py  metric_parser_evaluator_demo.py  repo_mapper_config_examples.yaml  repo_mapper_demo.py
loopbench/: __init__.py  cli.py  deps.py  hero.py  io_harness.py  scaffold.py
openevolve/: api.py  candidate_db.py  cli.py  config.py  config_validator.py  controller.py  database.py  evaluation_result.py  evaluator.py  iteration.py  metric_parser.py  optimizer_loop.py  process_parallel.py  profiler.py  repo_manager.py  report_generator.py  search_strategy.py  workspace_errors.py  workspace_manager.py  workspace_types.py
sandbox/: Dockerfile.sandbox  __init__.py  entrypoint.sh  runner.py  score_generic.sh  test_sandbox.py
tests/: checkpoint_task_4.py  test_api_key_from_env.py  test_config_validator.py  test_cost_budget.py  test_dashboard.py  test_deps.py  test_end_to_end.py  test_file_analyzer.py  test_io_harness.py  test_llm_patch.py  test_metric_parser.py  test_metric_parser_integration.py  test_optimizer_cli.py  test_optimizer_loop.py  test_optimizer_loop_database.py  test_optimizer_prompt.py  test_reasoning_effort_config.py  test_repo_manager.py  test_repo_mapper_properties.py  (+7 more)
(+117 files in other folders)
