[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loopbench-optimizer"
dynamic = ["version"]
description = "Autonomous evolutionary code optimizer powered by LLMs. Point it at a repo, watch it evolve your code to run faster."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "manashatwar" }]
dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "numpy>=1.22.0",
    "tqdm>=4.64.0",
    "flask",
    "dacite>=1.9.2",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.15.0",
    "requests>=2.28.0",
    "pre-commit>=4.5.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[project.scripts]
openevolve-run = "openevolve.cli:main"
loopbench = "loopbench.cli:main"
optimizer = "openevolve.cli:optimizer_main"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring external services",
    "performance: marks tests as performance benchmarks",
]
addopts = "--strict-markers --import-mode=importlib"

[tool.setuptools.packages.find]
include = ["openevolve*", "loopbench*", "sandbox*"]

[tool.setuptools.package-data]
openevolve = ["prompts/defaults/*.txt", "prompts/defaults/*.json"]

[tool.setuptools.dynamic]
version = { attr = "openevolve._version.__version__" }

[tool.pyrefly]
python-interpreter-path = ".venv/Scripts/python.exe"
site-package-path = [".venv/Lib/site-packages"]

